<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <!-- Back Button -->

    <!-- Title -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@null"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/lets_get_connected"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Subtitle -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/easy_safe_way_to_connect"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray" />

    <!-- Illustration -->

    <!-- Button -->
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:layout_marginTop="136dp"
        android:src="@drawable/illusss"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="122dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:drawablePadding="8dp"
        android:text="@string/continue_via_number"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>
